--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2 editable" data-id="attraction-title-3">Kaiping Peacock Lake National Wetland Park</h3>
                         <p class="text-gray-600 mb-4 editable" data-id="attraction-desc-3">
-                            As part of Jiangmen’s rich natural landscape, this wetland park is famous for its clear lake water, lush wetland vegetation, and diverse wildlife. It is an ideal place for bird-watching, photography, and eco-tourism, allowing tourists to get close to nature and enjoy the peace of the wetland.
+                            This wetland park is famous for its clear lake water, lush wetland vegetation, and diverse wildlife. It is an ideal place for bird-watching, photography, and eco-tourism, allowing tourists to get close to nature and enjoy the peace of the wetland.
                         </p>
                         <div class="flex justify-between items-center">
                           <!-- <a href="#" class="editable-link attraction-detail-btn text-red-600 hover:text-red-700 font-medium flex items-center" data-id="attraction-link-3" title="点击查看详情">
@@ -624,7 +624,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2 editable" data-id="attraction-title-4">Naqin Peninsula Geopark & Ocean Park</h3>
                         <p class="text-gray-600 mb-4 editable" data-id="attraction-desc-4">
-                        Jiangmen is rich in coastal tourism resources and has many islands, which can meet all your expectations for coastal tourism. Naqin Peninsula Geopark & Ocean Park is a highlight of Jiangmen’s coastal scenery. It is famous for its unique coastal landforms such as strange rocks and sea erosion cliffs, and clear blue sea water. Tourists can walk along the coastal plank road, enjoy the magnificent sea view, or take part in marine activities such as snorkeling and beach camping.</p>
+Naqin Peninsula Geopark & Ocean Park is a highlight of Jiangmen’s coastal scenery. It is famous for its unique coastal landforms such as strange rocks and sea erosion cliffs, and clear blue sea water. Tourists can walk along the coastal plank road, enjoy the magnificent sea view, or take part in marine activities such as snorkeling and beach camping.</p>
                         <div class="flex justify-between items-center">
                             <!--< a href="#" class="editable-link attraction-detail-btn text-red-600 hover:text-red-700 font-medium flex items-center" data-id="attraction-link-4" title="点击查看详情">
                                 Learn More <i class="fas fa-arrow-right ml-2"></i>
@@ -860,7 +860,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2 editable" data-id="food-title-5">Liyue Cured Meat</h3>
                         <p class="text-gray-600 mb-4 editable" data-id="food-desc-5">
-                            Liyue Cured Meat is a century-old flavor from Liyue Street, Jianghai District, Jiangmen, and was listed in Jiangmen’s intangible cultural heritage in 2020. It’s richly savory, oily but not greasy. Its classic clay pot rice—rice soaked with cured meat oil, fragrant and warm—is a must-try in autumn and winter, offering authentic deliciousness.
+                            Liyue Cured Meat is a century-old flavor from Jiangmen, and was listed in Jiangmen’s intangible cultural heritage in 2020. It’s richly savory, oily but not greasy. Its classic clay pot rice—rice soaked with cured meat oil, fragrant and warm—is a must-try in autumn and winter, offering authentic deliciousness.
                         </p>
                         <div class="flex justify-between items-center">
                            
